# beamly

./: .env.example  .gitignore  .vercelignore  CHECKLIST.md  CONTRIBUTING.md  Dockerfile  FIRST_GOOD_ISSUE.md  LICENSE  README.md  config.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  run.py  tailwind.config.js  vercel.json
app/: __init__.py  routes.py  socket_events.py
app/models/: __init__.py
app/services/: __init__.py  room_manager.py
app/static/css/: style.css
app/static/css/src/: main.css
app/static/js/: connection.js  receiver.js  rtc.js  sender.js  signaling.js  ui.js
app/templates/: base.html  docs.html  landing.html  room.html
app/utils/: __init__.py  helpers.py
